Add Command Send Message
